@@ -206,6 +206,18 @@ Description: {$description} (gir1.2-pkg)
  things.  It should not be installed like a regular package.  It may
  be an empty package.
 
+Package: libnss-{$source}
+Architecture: all
+Section: web
+Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
+Description: {$description} (NSS module)
+ Test for NSS modules.
+ .
+ This is a test package designed to exercise some feature or tag of
+ Lintian.  It is part of the Lintian test suite and may do very odd
+ things.  It should not be installed like a regular package.  It may
+ be an empty package.
+
 Package: libpam-{$source}1
 Architecture: all
 Depends: $\{shlibs:Depends\}, $\{misc:Depends\}
